// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render 1`] = `
<button
  class="displayValue"
>
  My value
  <span
    aria-hidden="true"
    class="toggle fa fa-chevron-down"
  />
</button>
`;

exports[`The component should render with an icon 1`] = `
<button
  class="displayValue hasIcon"
>
  <span
    aria-hidden="true"
    class="frontIcon fa fa-plus"
  />
  My value
  <span
    aria-hidden="true"
    class="toggle fa fa-chevron-down"
  />
</button>
`;
